Some frontend fixes - Using pp's pretty_inspect combined with <pre> tags to make the objects a bit more readable

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 html {
   background-color: #f2f3f4;
+  font-family: sans-serif;
 }
 
 .sidebar-nav ul {
